--- a/app/src/main/res/layout/activity_oc_show_saved_stop.xml
+++ b/app/src/main/res/layout/activity_oc_show_saved_stop.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/toolBar"
-        android:text="@string/oc_delStop"
+        android:text="@string/oc_savedStop"
         android:textAlignment="center"
         android:textSize="20sp" />
 
@@ -36,38 +36,19 @@
         android:progress="@android:integer/config_mediumAnimTime"
         android:visibility="visible" />
 
-    <EditText
-        android:id="@+id/delete"
+    <fragment
+        android:id="@+id/fragment3"
+        android:name="com.example.shican.quizcreator.OCFragmentSavedStop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/inProgress"
-        android:ems="10"
-        android:hint="@string/oc_enterStop" />
-
-    <Button
-        android:id="@+id/del_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/delete"
-        android:layout_centerHorizontal="true"
-        android:text="@string/oc_delStop" />
+        android:layout_below="@+id/inProgress" />
 
     <Button
         android:id="@+id/back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/del_button"
-        android:layout_marginStart="0dp"
         android:text="@string/oc_back" />
-
-    <fragment
-        android:id="@+id/fragment2"
-        android:name="com.example.shican.quizcreator.OCFragmentSavedStop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/back" />
 
 </RelativeLayout>
