--- a/app/src/main/res/layout/activity_oc_infor.xml
+++ b/app/src/main/res/layout/activity_oc_infor.xml
@@ -36,23 +36,13 @@
         android:progress="@android:integer/config_mediumAnimTime"
         android:visibility="visible" />
 
-    <Button
-        android:id="@+id/done"
+    <fragment
+        android:id="@+id/fragment3"
+        android:name="com.example.shican.quizcreator.OCFragmentRouteInformation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:text="@string/oc_done" />
-
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="91dp"
-        android:layout_marginBottom="91dp"
-        />
+        android:layout_below="@+id/inProgress"
+        android:layout_above="@+id/back"/>
 
 </RelativeLayout>
