--- a/app/src/main/res/layout/activity_oc_result_route.xml
+++ b/app/src/main/res/layout/activity_oc_result_route.xml
@@ -36,40 +36,13 @@
         android:textAlignment="center"
         android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/stopNum"
+    <fragment
+        android:id="@+id/fragment2"
+        android:name="com.example.shican.quizcreator.OCFragmentSearchResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/inProgress"
-        android:text="@string/oc_stopNum"
-        android:textSize="18sp" />
+        android:layout_below="@+id/inProgress" />
 
-    <TextView
-        android:id="@+id/stopDes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/stopNum"
-        android:text="@string/oc_stopDes"
-        android:textSize="18sp" />
-
-    <Button
-        android:id="@+id/back"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
-        android:text="@string/oc_back" />
-
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/back"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/stopDes"
-        android:layout_marginTop="26dp" />
 
 </RelativeLayout>
