--- a/app/src/main/res/menu/project_main_actions.xml
+++ b/app/src/main/res/menu/project_main_actions.xml
@@ -37,7 +37,7 @@
 
     <item android:id="@+id/import_resource"
         android:icon="@drawable/import_resource"
-        android:title="Import"
+        android:title="@string/importXML"
         app:showAsAction="never"/>
 
     <item android:id="@+id/stats"
