--- a/app/src/main/res/layout/activity_oc_main.xml
+++ b/app/src/main/res/layout/activity_oc_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/holo_green_light"
+        android:background="@android:color/holo_red_light"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
