--- a/app/src/main/res/layout/activity_oc_show_saved_stop.xml
+++ b/app/src/main/res/layout/activity_oc_show_saved_stop.xml
@@ -12,7 +12,7 @@
         android:layout_height="?attr/actionBarSize"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:background="@android:color/holo_green_light"
+        android:background="@android:color/holo_red_light"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
