--- a/app/src/main/res/layout/activity_display_quiz.xml
+++ b/app/src/main/res/layout/activity_display_quiz.xml
@@ -20,7 +20,6 @@
         android:id="@+id/quizDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/quizContainer"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/toolBar"
         android:textSize="30sp" />
@@ -29,8 +28,17 @@
         android:id="@+id/quizContainer"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_above="@+id/enterAnswer"
+        android:layout_above="@+id/youAnswerHere"
         android:layout_alignParentStart="true"></FrameLayout>
+
+    <TextView
+        android:id="@+id/youAnswerHere"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/checkAnswer"
+        android:layout_alignParentStart="true"
+        android:textSize="20sp"
+        android:text="@string/typeAnswerHere"/>
 
     <EditText
         android:id="@+id/enterAnswer"
