--- a/app/src/main/res/layout/activity_oc_main.xml
+++ b/app/src/main/res/layout/activity_oc_main.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
         android:progress="@android:integer/config_mediumAnimTime"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/adddelStop"
