--- a/app/src/main/res/layout/activity_oc_result_route.xml
+++ b/app/src/main/res/layout/activity_oc_result_route.xml
@@ -19,7 +19,7 @@
     <ProgressBar
         android:id="@+id/inProgress"
         style="?android:attr/progressBarStyleHorizontal"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
