--- a/app/src/main/res/layout/activity_display_quiz.xml
+++ b/app/src/main/res/layout/activity_display_quiz.xml
@@ -16,18 +16,41 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         android:layout_alignParentTop="true"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/edit"
+        android:layout_below="@+id/toolBar">
+
+        <Button
+            android:id="@+id/delete"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:text="@string/delete" />
+
+        <Button
+            android:id="@+id/modify"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:text="@string/modify" />
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/quizDetail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/quizContainer"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolBar"
         android:textSize="30sp" />
 
     <FrameLayout
         android:id="@+id/quizContainer"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="320dp"
         android:layout_above="@+id/youAnswerHere"
         android:layout_alignParentStart="true"></FrameLayout>
 
