--- a/app/src/main/res/layout/activity_create_quiz.xml
+++ b/app/src/main/res/layout/activity_create_quiz.xml
@@ -64,7 +64,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/save" />
+        android:layout_below="@+id/save"
+        android:progressTint="@android:color/holo_blue_dark" />
 
 
 </RelativeLayout>
